--- a/about_vacancies.html
+++ b/about_vacancies.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>Mededucation</title>
@@ -10,10 +11,11 @@
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
-	
+
 	<div class="page">
-		
+
 		<!--header-->
 		<header>
 			<div class="container">
@@ -87,7 +89,7 @@
 					</form>
 					<div class="header-bottom-mobile">
 						<a href="" class="button header-recall">Заказать звонок</a>
-							<ul class="socials-list">
+						<ul class="socials-list">
 							<li><a href="" class="youtube"><img src="images/youtube.svg" alt=""></a></li>
 							<li><a href="" class="vk"><img src="images/vk.svg" alt=""></a></li>
 							<li><a href="" class="facebook"><img src="images/facebook.svg" alt=""></a></li>
@@ -145,20 +147,28 @@
 								<h3>Менеджер по работе с клиентами</h3>
 							</div>
 							<div class="simple-text">
-								<p>У нас открыта позиция для проактивных людей, которые хотят работать в стабильной организации с высоким и постоянно растущим доходом, иметь возможности профессионально расти и и развиваться среди таких же амбициозных и по-настоящему дружных коллег!</p>
-								<p><strong>Задачи: </strong>телефонные продажи дополнительного профессионального образования в сегменте B2B/B2C;</p>
+								<p>У нас открыта позиция для проактивных людей, которые хотят работать в стабильной организации с
+									высоким и постоянно растущим доходом, иметь возможности профессионально расти и и развиваться среди
+									таких же амбициозных и по-настоящему дружных коллег!</p>
+								<p><strong>Задачи: </strong>телефонные продажи дополнительного профессионального образования в сегменте
+									B2B/B2C;</p>
 								<p class="pre-list"><strong>От тебя: </strong></p>
 								<ul class="dotted-list">
 									<li>Хорошие коммуникативные навыки;</li>
 									<li>Нацеленность на результат;</li>
 									<li>Ответственность;</li>
 									<li>Высокий уровень обучаемости;</li>
-									<li>Готовность реально много звонить и совершать достойные сделки, ведь Наш Университет предоставляет Вам возможность продавать уникальный и востребованный продукт. <br>Спрос на услуги нашей компании есть всегда, так как наши продукты необходимы клиентам в соответствии с законодательством. <br>Наши услуги принципиально важны для ведения и совершенствования трудовой деятельности наших клиентов;</li>
+									<li>Готовность реально много звонить и совершать достойные сделки, ведь Наш Университет предоставляет
+										Вам возможность продавать уникальный и востребованный продукт. <br>Спрос на услуги нашей компании
+										есть всегда, так как наши продукты необходимы клиентам в соответствии с законодательством. <br>Наши
+										услуги принципиально важны для ведения и совершенствования трудовой деятельности наших клиентов;
+									</li>
 									<li>Опыт в продажах, как преимущество;</li>
 								</ul>
 								<p class="pre-list"><strong>От нас: </strong></p>
 								<ul class="dotted-list">
-									<li>Своевременные выплаты 3 раза в месяц по системе fix + % c продаж без верхней планки (средний уровень дохода менеджера в компании 80 000 руб.);</li>
+									<li>Своевременные выплаты 3 раза в месяц по системе fix + % c продаж без верхней планки (средний
+										уровень дохода менеджера в компании 80 000 руб.);</li>
 									<li>Оформление по ТК РФ;</li>
 									<li>Реальные возможности карьерного роста;</li>
 									<li>Постоянное обучение у ведущих тренеров;</li>
@@ -166,12 +176,15 @@
 									<li>Развитая корпоративная жизнь;</li>
 								</ul>
 								<p><strong>Адрес: </strong>ВДНХ, Москва, улица Кондратюка, 3</p>
-								<p><strong>По всем вопросам обращаться: </strong><a href="mailto:hh@mededucation.info" class="mail-link">hh@mededucation.info</a></p>
+								<p><strong>По всем вопросам обращаться: </strong><a href="mailto:hh@mededucation.info"
+										class="mail-link">hh@mededucation.info</a></p>
 								<p><strong>Телефон: </strong><a href="tel:8-499-116-69-63">+7 (499) 116-69-63</a></p>
 								<div class="about-hh">
 									<a href="" class="about-hh-link"">
 										<span>Все наши вакансии на HeadHunter</span>
-										<div class="pic"><img src="images/hh-logo.svg" alt=""></div>
+										<div class="pic">
+											<img src="images/hh-logo.svg" alt="" />
+										</div>
 									</a>
 								</div>
 							</div>
@@ -180,128 +193,130 @@
 				</div>
 			</section>
 
-		</div>	
-		<!--//main-content-->
+		</div>
+	<!--//main-content-->
 
-		<!--footer-->
-		<footer>
-			<div class="footer-top">
-				<div class="container">
-					<div class="footer-top-content">
-						<ul class="footer-top-info">
+	<!--footer-->
+	<footer>
+		<div class="footer-top">
+			<div class="container">
+				<div class="footer-top-content">
+					<ul class="footer-top-info">
+						<li>
+							<a href="" class="main-logo">
+								<div class="pic"><img src="images/main-logo.png" alt=""></div>
+								<span>Институт профессионального образования</span>
+							</a>
+						</li>
+						<li>
+							<p>&copy; 2020. Все права защищены. Дополнительное профессиональное образование - ДПО. НАНО ИПО -
+								навигатор карьерного роста.</p>
+						</li>
+						<li>
+							<p>Лицензия на образовательную деятельность № 039703</p>
+						</li>
+					</ul>
+					<div class="footer-top-links">
+						<div class="footer-top-links-flex">
+							<ul class="footer-menu">
+								<li>
+									<a href="">Главная</a>
+								</li>
+								<li>
+									<a href="">Новости</a>
+								</li>
+								<li>
+									<a href="">Контакты</a>
+								</li>
+							</ul>
+							<ul class="footer-menu">
+								<li>
+									<a href="">Вебинары</a>
+									<ul class="footer-podmenu">
+										<li><a href="">Расписание</a></li>
+										<li><a href="">Записи</a></li>
+										<li><a href="">Спикеры</a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+						<ul class="footer-menu">
 							<li>
-								<a href="" class="main-logo">
-									<div class="pic"><img src="images/main-logo.png" alt=""></div>
-									<span>Институт профессионального образования</span>
-								</a>
-							</li>
-							<li>
-								<p>&copy; 2020. Все права защищены. Дополнительное профессиональное образование - ДПО. НАНО ИПО - навигатор карьерного роста.</p>
-							</li>
-							<li>
-								<p>Лицензия на образовательную деятельность № 039703</p>
+								<a href="">Дистанционные программы</a>
+								<ul class="footer-podmenu">
+									<li><a href="">Высший медперсонал</a></li>
+									<li><a href="">Средний медперсонал</a></li>
+									<li><a href="">Управление в медицине</a></li>
+									<li><a href="">Программы НМО</a></li>
+									<li><a href="">Тематическое усовершенствование</a></li>
+								</ul>
 							</li>
 						</ul>
-						<div class="footer-top-links">
-							<div class="footer-top-links-flex">
-								<ul class="footer-menu">
-									<li>
-										<a href="">Главная</a>
-									</li>
-									<li>
-										<a href="">Новости</a>
-									</li>
-									<li>
-										<a href="">Контакты</a>
-									</li>
+						<ul class="footer-menu">
+							<li>
+								<a href="">Об Университете</a>
+								<ul class="footer-podmenu">
+									<li><a href="">Сведения об образовательной организации</a></li>
+									<li><a href="">Документы</a></li>
+									<li><a href="">Образовательные стандарты</a></li>
+									<li><a href="">Руководство и педагогический состав</a></li>
+									<li><a href="">Вакансии</a></li>
+									<li><a href="">Отзывы</a></li>
 								</ul>
-								<ul class="footer-menu">
-									<li>
-										<a href="">Вебинары</a>
-										<ul class="footer-podmenu">
-											<li><a href="">Расписание</a></li>
-											<li><a href="">Записи</a></li>
-											<li><a href="">Спикеры</a></li>
-										</ul>
-									</li>
-								</ul>
-							</div>
-							<ul class="footer-menu">
-								<li>
-									<a href="">Дистанционные программы</a>
-									<ul class="footer-podmenu">
-										<li><a href="">Высший медперсонал</a></li>
-										<li><a href="">Средний медперсонал</a></li>
-										<li><a href="">Управление в медицине</a></li>
-										<li><a href="">Программы НМО</a></li>
-										<li><a href="">Тематическое усовершенствование</a></li>
-									</ul>
-								</li>
-							</ul>
-							<ul class="footer-menu">
-								<li>
-									<a href="">Об Университете</a>
-									<ul class="footer-podmenu">
-										<li><a href="">Сведения об образовательной организации</a></li>
-										<li><a href="">Документы</a></li>
-										<li><a href="">Образовательные стандарты</a></li>
-										<li><a href="">Руководство и педагогический состав</a></li>
-										<li><a href="">Вакансии</a></li>
-										<li><a href="">Отзывы</a></li>
-									</ul>
-								</li>
+							</li>
+						</ul>
+					</div>
+					<div class="footer-top-contacts">
+						<div class="footer-phone">
+							<p>Консультация по обучению:</p>
+							<a href="tel:8-499-116-69-63" class="tel">+7 (499) 116-69-63</a>
+						</div>
+						<div class="footer-socials">
+							<p>Социальные сети:</p>
+							<ul class="socials-list">
+								<li><a href="" class="youtube"><img src="images/youtube.svg" alt=""></a></li>
+								<li><a href="" class="vk"><img src="images/vk.svg" alt=""></a></li>
+								<li><a href="" class="facebook"><img src="images/facebook.svg" alt=""></a></li>
+								<li><a href="" class="instagram"><img src="images/instagram.svg" alt=""></a></li>
 							</ul>
 						</div>
-						<div class="footer-top-contacts">
-							<div class="footer-phone">
-								<p>Консультация по обучению:</p>
-								<a href="tel:8-499-116-69-63" class="tel">+7 (499) 116-69-63</a>
-							</div>
-							<div class="footer-socials">
-								<p>Социальные сети:</p>
-								<ul class="socials-list">
-									<li><a href="" class="youtube"><img src="images/youtube.svg" alt=""></a></li>
-									<li><a href="" class="vk"><img src="images/vk.svg" alt=""></a></li>
-									<li><a href="" class="facebook"><img src="images/facebook.svg" alt=""></a></li>
-									<li><a href="" class="instagram"><img src="images/instagram.svg" alt=""></a></li>
-								</ul>
-							</div>
-							<form action="#" method="post" class="search-form footer-search">
-								<input type="text">
-								<button type="submit"><img src="images/search.svg" alt=""></button>
-							</form>
-						</div>
+						<form action="#" method="post" class="search-form footer-search">
+							<input type="text">
+							<button type="submit"><img src="images/search.svg" alt=""></button>
+						</form>
 					</div>
 				</div>
 			</div>
-			<div class="footer-middle">
-				<div class="container">
-					<ul class="footer-middle-list">
-						<li><a href="">Политика обработки конфеденциальных данных</a></li>
-						<li><a href="">Техническая страница</a></li>
-						<li><a href="">Другая техническая страница</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="footer-bottom">
-				<div class="container">
-					<ul class="footer-bottom-systems">
-						<li><img src="images/footer-pay-systems-1.jpg" alt=""></li>
-						<li><img src="images/footer-pay-systems-2.jpg" alt=""></li>
-					</ul>
-				</div>
-			</div>
-		</footer>
-		<!--//footer-->
-
-		<div class="fixed-mobile-button">
-			<a href="" class="button">Оставить заявку</a>
 		</div>
+		<div class="footer-middle">
+			<div class="container">
+				<ul class="footer-middle-list">
+					<li><a href="">Политика обработки конфеденциальных данных</a></li>
+					<li><a href="">Техническая страница</a></li>
+					<li><a href="">Другая техническая страница</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="footer-bottom">
+			<div class="container">
+				<ul class="footer-bottom-systems">
+					<li><img src="images/footer-pay-systems-1.jpg" alt=""></li>
+					<li><img src="images/footer-pay-systems-2.jpg" alt=""></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
+	<!--//footer-->
+
+	<div class="fixed-mobile-button">
+		<a href="" class="button">Оставить заявку</a>
 	</div>
-	
+	</div>
+
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/stickykit.js"></script>
 	<script src="js/myjs.js"></script>
-	
+
 </body>
+
 </html>
